@@ -1,4 +1,9 @@
 2014-10-31  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Status.pm (new): Return error if it can't open the
+	  amdump_log file.
+	* perl/Amanda/Rest/Status.pm, server-src/amstatus.pl: Handle error.
+
+2014-10-31  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Status.pm: Fix perl warnings.
 
 2014-10-31  Jean-Louis Martineau <martineau@zmanda.com>
